net: properly set the SoupCache max size

The SoupCache expects the maximum size to be specified in bytes
instead of in megabytes. Also removed the call to
soup_cache_set_max_size just after creating the cache as it is not
needed.

https://bugzilla.gnome.org/show_bug.cgi?id=700310